// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> should render correctly 1`] = `
<Itemstyle__ItemContainer
  aria-labelledby="drag-instructions"
  isEmpty={false}
  style={
    Object {
      "cursor": "grab",
      "opacity": 1,
    }
  }
>
  <Icon
    className="icon-menu"
    name="menu"
  />
  Bonjour
</Itemstyle__ItemContainer>
`;

exports[`<Item /> should render correctly when empty 1`] = `
<Itemstyle__ItemContainer
  aria-labelledby="drag-instructions"
  isEmpty={true}
  style={
    Object {
      "cursor": "default",
      "opacity": 1,
    }
  }
/>
`;

exports[`<Item /> should render correctly with other props 1`] = `
<Itemstyle__ItemContainer
  aria-labelledby="drag-instructions"
  isEmpty={false}
  style={
    Object {
      "cursor": "grab",
      "opacity": 1,
    }
  }
>
  <Icon
    className="icon-menu"
    name="menu"
  />
  Bonjour 2
</Itemstyle__ItemContainer>
`;
